[package]
name = "snake-minter-devnet"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "snake_minter_devnet"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version="0.27.0", features=["init-if-needed"] }
solana-program = "*" # Will be resolved to the same version as in `anchor-lang`.
anchor-spl = "0.27.0"
winnow = "=0.4.1"
